Add jQuery example.

--- a/examples/index.html
+++ b/examples/index.html
@@ -39,6 +39,11 @@
                             <a href="/angular/">Angular Example</a>
                         </h4>
                     </li>
+                    <li>
+                        <h4>
+                            <a href="/jquery/">jQuery Example</a>
+                        </h4>
+                    </li>
                 </ol>
             </div>
         </div>
