--- a/examples/jquery/index.html
+++ b/examples/jquery/index.html
@@ -84,6 +84,7 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <span class="brand">Elastic.js jQuery Example</span>
+                <button id="btnIndexDocs" class="btn btn-inverse pull-right">Index Sample Docs</button>
             </div>
         </div>
     </div>
