Upgrade Angular.JS to version 1.2.3

--- a/examples/angular/index.html
+++ b/examples/angular/index.html
@@ -21,6 +21,7 @@
     <script src="/common/lib/modernizr-2.6.1.min.js"></script>
     <script src="/common/lib/underscore.min.js"></script>
     <script src="/common/lib/angular.min.js"></script>
+    <script src="/common/lib/angular-route.min.js"></script>
     <script src="/dist/elastic.min.js"></script>
     <script src="/dist/elastic-angular-client.min.js"></script>
       
